# ai-harness

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  harness.toml  harness.toml.example  pyproject.toml
docker/: harness.toml
docs/: source-walkthrough.md
docs/reports/: 2026-06-11-efficacy-qwen27-n1.md
docs/superpowers/plans/: 2026-06-11-small-llm-claude-code-proxy.md  2026-06-12-capability-routing.md  2026-06-12-eval-expansion.md  2026-06-12-growth-loop.md  2026-06-12-planning-scaffold.md  2026-06-12-project-memory.md  (+8 more)
evals/: configs.py  report.py  run.py
scripts/: compile_skills.py  corpus.py  lora_train.py  memory_distill.py  promote_candidate.py  relax_scaffold.py  shadow_eval.py  smoke.sh
src/harness/: __main__.py  action_state.py  cache.py  config.py  critic.py  guards.py  ir.py  log.py  memory.py  ocr.py  planning.py  reasoning_budget.py  relay.py  research.py  research_io.py  review.py  rotation.py  router.py  server.py  skills.py  traces.py
tests/: fake_openai.py  test_action_state.py  test_anthropic_in.py  test_anthropic_out.py  test_backends.py  test_cache_mechanics.py  test_config.py  test_counter.py  test_critic.py  test_evals.py  test_fewshot.py  test_growth.py  test_history.py  test_ir.py  test_log.py  test_memory.py  test_path_canon.py  test_pool_router.py  test_profiles.py  test_reasoning_budget.py  test_relay.py  test_repair.py  test_response_cache.py  test_server.py  test_server_logging.py  test_skills.py  test_system_prompt.py  test_tool_prune.py  test_tool_schema.py  test_traces.py
tests/fixtures/: cc_request.json
(+53 files in other folders)
