[project]
name = "ai-harness"
version = "0.1.0"
description = "Claude Code-compatible proxy that maximizes the effectiveness of small (14b-30b) LLMs"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "json-repair>=0.30",
    "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
